--- a/UiProject/assets/main/package.xml
+++ b/UiProject/assets/main/package.xml
@@ -65,6 +65,7 @@
     <image id="nhm2jz" name="status_bg.png" path="/Images/" scale="9grid" scale9grid="25,23,45,17"/>
     <image id="nhm2k0" name="image_icon.png" path="/Images/"/>
     <image id="nhm2k1" name="filter.png" path="/Images/"/>
+    <component id="9ch8k2" name="UserDetailOptionWindow.xml" path="/" exported="true"/>
   </resources>
   <publish name="" genCode="true"/>
 </packageDescription>
